# demo-test

./: CMakeLists.txt  LICENSE  shape.cpp  shape.hpp
.github/workflows/: cmake-multi-platform.yml
rectangle/: CMakeLists.txt  rectangle.cpp
square/: CMakeLists.txt  square.cpp
